--- a/EMU.csproj
+++ b/EMU.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <Folder Include="Logs\" />
+    <Folder Include="Screens\" />
     <Folder Include="Temp\" />
   </ItemGroup>
 
