--- a/EMU.csproj
+++ b/EMU.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Temp\**" />
+    <EmbeddedResource Remove="Temp\**" />
+    <None Remove="Temp\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="OpenCvSharp4" Version="4.10.0.20240616" />
     <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.10.0.20240616" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.10" />
@@ -17,7 +23,6 @@
   <ItemGroup>
     <Folder Include="Logs\" />
     <Folder Include="Screens\" />
-    <Folder Include="Temp\" />
   </ItemGroup>
 
 </Project>
