--- a/EMU.csproj
+++ b/EMU.csproj
@@ -1,28 +1,37 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<PublishSingleFile>true</PublishSingleFile>
+		<SelfContained>true</SelfContained>
+		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
+		<Version>1.0.0</Version>
+		<Authors>Dein Name</Authors>
+		<Company>Dein Unternehmen</Company>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Compile Remove="Temp\**" />
-    <EmbeddedResource Remove="Temp\**" />
-    <None Remove="Temp\**" />
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Remove="publish\**" />
+		<Compile Remove="Temp\**" />
+		<EmbeddedResource Remove="publish\**" />
+		<EmbeddedResource Remove="Temp\**" />
+		<None Remove="publish\**" />
+		<None Remove="Temp\**" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="OpenCvSharp4" Version="4.10.0.20240616" />
-    <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.10.0.20240616" />
-    <PackageReference Include="System.Drawing.Common" Version="8.0.10" />
-    <PackageReference Include="Tesseract" Version="5.2.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="OpenCvSharp4" Version="4.10.0.20240616" />
+		<PackageReference Include="OpenCvSharp4.runtime.win" Version="4.10.0.20240616" />
+		<PackageReference Include="System.Drawing.Common" Version="8.0.10" />
+		<PackageReference Include="Tesseract" Version="5.2.0" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Folder Include="Logs\" />
-    <Folder Include="Screens\" />
-  </ItemGroup>
+	<ItemGroup>
+		<Folder Include="Logs\" />
+		<Folder Include="Screens\" />
+	</ItemGroup>
 
 </Project>
