--- a/EMU.csproj
+++ b/EMU.csproj
@@ -9,18 +9,10 @@
 		<SelfContained>true</SelfContained>
 		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
 		<Version>1.0.0</Version>
-		<Authors>Dein Name</Authors>
+		<Authors>DanyFaust</Authors>
 		<Company>Dein Unternehmen</Company>
 	</PropertyGroup>
 
-	<ItemGroup>
-		<Compile Remove="publish\**" />
-		<Compile Remove="Temp\**" />
-		<EmbeddedResource Remove="publish\**" />
-		<EmbeddedResource Remove="Temp\**" />
-		<None Remove="publish\**" />
-		<None Remove="Temp\**" />
-	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="OpenCvSharp4" Version="4.10.0.20240616" />
@@ -29,9 +21,5 @@
 		<PackageReference Include="Tesseract" Version="5.2.0" />
 	</ItemGroup>
 
-	<ItemGroup>
-		<Folder Include="Logs\" />
-		<Folder Include="Screens\" />
-	</ItemGroup>
 
 </Project>
