--- a/EMU.csproj
+++ b/EMU.csproj
@@ -20,6 +20,18 @@
 		<PackageReference Include="System.Drawing.Common" Version="8.0.10" />
 		<PackageReference Include="Tesseract" Version="5.2.0" />
 	</ItemGroup>
-
+	
+	<ItemGroup>
+		<!-- Kopiert alle Dateien und Ordner im Verzeichnis "Resources" -->
+		<None Update="Resources\**\*">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+		</None>
+	</ItemGroup>
+	
+	<ItemGroup>
+	  <Folder Include="Resources\Screens\" />
+	</ItemGroup>
+	
 
 </Project>
